tester/testsuite/good/core027.yal
fn main() -> int { 
    let b: boolean = false;
    while(b){}
    return 0; 
}
