tester/testsuite/bad/array03.yal
fn main() -> int {
let a: int[];
  a = new int[50];
  a[0] = true;
  return 0;
}
